Fix search placeholder text, will work normally ONLY (1) on iOS Safari...read more
There's inconsistency in rendering of [placefolder] {text-indent:.....} I chose to use
iphone's webkit as benchmark, this will render incorrectly on regular safari or webkit on
apple OSX; did not test in other operating system.

--- a/sugarcrm/styleguide/css/bootstrap-mobile.css
+++ b/sugarcrm/styleguide/css/bootstrap-mobile.css
@@ -4190,7 +4190,7 @@ html {
   color: #c2c2c2;
 }
 .search-query[placeholder] {
-  padding-left: 30px !important;
+  text-indent: 30px !important;
 }
 #listing .search-query {
   width: 98.75%;
