--- a/sugarcrm/styleguide/less/sugarmobile.less
+++ b/sugarcrm/styleguide/less/sugarmobile.less
@@ -529,7 +529,7 @@ html {
 }
 
 .search-query[placeholder] {
-  padding-left: 30px !important;
+  text-indent: 30px !important;
 }
 
 #listing .search-query {
